z-index fixes

--- a/css/content.css
+++ b/css/content.css
@@ -70,7 +70,7 @@
 	pointer-events: none;
 	opacity: 0;
 	position: fixed;
-	z-index: 9999;
+	z-index: 100;
 	left: 17%;
 	right: 0;
 	top: 0;
