--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,12 @@ ul li, li {
 
 
 @media screen and (max-width: 800px) {
+
+	.nav--next,
+	.nav--prev {
+		display: none;
+	}
+
 	.menu-primary-container {
 		position: absolute;
 		background-color: #ccc;
@@ -191,7 +197,7 @@ ul li, li {
 		top: 44px;
 		width: 100%;
 		max-height: 300px;
-		overflow: scroll;
+		overflow-y: scroll;
 		border-bottom: 1px solid #000;
 		padding: 30px 20px 5px 20px;
 		text-align: left;
